--- a/index.html
+++ b/index.html
@@ -45,9 +45,15 @@
           <a class="nav-link" href="https://www.meetup.com/OverBoardLondon/"><img src="meetup.svg" height="30" alt="MeetUp" /></a>
         </li>
         <li class="nav-item">
-           <a class="nav-link" href="https://www.facebook.com/overboardlondon.club/"><img src="facebook.svg" height="30" alt="Facebook" /></a>
+          <a class="nav-link" href="https://www.facebook.com/overboardlondon.club/"><img src="facebook.svg" height="30" alt="Facebook" /></a>
         </li>
-       </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="https://discord.gg/fudYf9xaff"><img src="discord.svg" height="30" alt="Discord" /></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://patreon.com/OverBoardLondon"><img src="patreon.png" height="30" alt="patreon" /></a>
+        </li>
+      </ul>
     </div>
 
     </div>
@@ -68,29 +74,30 @@
           <hr>
 
           <div class="lead">
-              <p> A meetup group for charming geeks who are interested in games, films, comics and other geek culture.</p>
+              <p> We are a meetup group based in London who are interested in games, films, comics and other geek culture.</p>
               <a href="https://www.meetup.com/OverBoardLondon/"><button type="button" class="btn btn-secondary btn-lg roboto" style="white-space: normal">RSVP to your next event here!</button></a>
+              <a href="https://www.patreon.com/OverBoardLondon/"><button type="button" class="btn btn-secondary btn-lg roboto" style="white-space: normal">Support us on Patreon!</button></a>
           </div>
         </div>
       </div>
     </div>
     <!-- End of row with jumbotron component -->
 
+
+
+    <a name="eventsSection">
+      <div class="text-center jumbotron p-3">
+        <h1 class="roboto">Event types</h1>
+        <hr>
+        <div class="lead">
+          <p>We like to run several kinds of events.</p>
+        </div>
+      </div>
+    </a>
+
     <!-- Row with cards -->
     <div class="d-flex flex-wrap justify-content-center">
 
-      <div class="p-2">
-        <div class="card h-100" style="width: 22rem;" >
-          <div class="card-header">
-            Massive Wednesday Monthlies
-          </div>
-          <img class="card-img-top" src="card1.jpeg">
-          <div class="card-body">
-            <p class=" card-text">
-              Our highly OverSubscribed monthly meetup in King's Cross. Great chance to meet everybody over a board game and a drink. First Wednesday of every month.
-          </div>
-        </div>
-      </div>
 
       <div class="p-2">
         <div class="card h-100" style="width: 22rem;">
@@ -100,7 +107,7 @@
           <img class="card-img-top" src="card2.jpeg">
           <div class="card-body">
             <p class=" card-text">
-              Our weekly Saturday meets in King's Cross. Come meet the community and play board games in a less crowded setting.
+              Our weekly Saturday meetups in the Thirsty Bear pub in Southwark. Come meet the community and play board games in a less crowded setting.
             </p>
           </div>
         </div>
@@ -138,12 +145,12 @@
       <div class="p-2">
         <div class="card h-100" style="width: 22rem;">
           <div class="card-header">
-            Exhibitions
+            Blood on the Clocktower
           </div>
-          <img class="card-img-top" src="lego.jpg">
+          <img class="card-img-top" src="botc.avif">
           <div class="card-body">
             <p class=" card-text">
-              Make the most of all the culture the city has to offer by coming along to one of our exhibition trips! Check the schedule for what's on.
+            Regular sessions of everyone's favourite social deduction game, at Otter Chaos in Brixton.
             </p>
           </div>
         </div>
@@ -163,6 +170,22 @@
         </div>
       </div>
 
+      <div class="p-2">
+        <a href="https://discord.gg/fudYf9xaff">
+        <div class="card h-100" style="width: 22rem;">
+          <div class="card-header">
+            Discord
+          </div>
+          <img class="card-img-top" src="discord.svg">
+          <div class="card-body">
+            <p class=" card-text">
+              Play some games and hang out with us online! Click to join
+            </p>
+          </div>
+        </div>
+      </div>
+    </a>
+
     </div>
     <!-- End of row with cards -->
     <br>
@@ -170,25 +193,65 @@
 
   </div>
 
-  <!-- list of upcoming events -->
+    <!-- Code of Conduct Section -->
+    <a name="codeOfConductSection">
+      <div class="text-center jumbotron p-3">
+        <h1 class="roboto">Code of Conduct</h1>
+        <hr>
+        <div class="container text-left">
+          As an organisation we aim to maintain a fun, inclusive and safe environment for playing games with our group of peers.
+            Hopefully participants will display the following behaviour when interacting with each other during sessions:
+          <details><summary>Good board game etiquette</summary>
+          <ul>
+            <li>Maintain a friendly demeanour (even when losing).</li>
+            <li>To engage with other partakers in a sociable manner through the session.</li>
+            <li>To be inclusive through our the session and to avoid barring anyone from games if a slot is available.</li>
+            <li>To remain respectful to the people you interact with throughout the session.</li>
+            <li>During games we encourage the following actions from members:</li>
+            <li>Be gracious toward mistakes. Games are played for fun so consequences are relatively low. Mistakes can be corrected or compensated. It's always good to remember others may be less familiar than you with a particular game.</li>
+            <li>When explaining games please communicate without frustration as not all elements of a game maybe immediately obvious to all players</li>
+            <li>If possible avoid abandoning games halfway, as it can be frustrating for your fellow players and maybe ruin their experience of the game. It's worth noting not all games have easy ways to compensate the loss of a player midway. </li>
+            <li>If you don't understand the rules of a game, please listen when it is being explained. It's ok to not know the rules of a game. It's ok to ask if you have forgotten, didn't understand, or have not played it before. But please have the respect to listen if you need them explained.</li>
+            <li>If you don't like a game, feel free to sit out. The group is more than just board games; feel free to socialise or to find other members playing games you would be more interested in engaging with.</li>
+            <li>Please treat the games with respect. The games are usually purchase with money donated to us by members or donation from members themselves and we aim to avoid wasting that generosity. We expect general wear and tear for our games but aim to avoid unnecessary damage to items. We also play games brought by member so it’s just a good rule of thumb to have respect for others property. </li>
+            <li>Helping others to understand a game is wonderful, but playing it for them is overbearing. Please allow others to play games as they see fit.</li>
+            </ul>
+          </details>
+          <details><summary>Treat each other with respect</summary>
+            <p>All attendees, organisers or volunteers attending our Meetup events are expected to comply with
+            the following code of conduct. We both authorise and encourage our organisers to enforce this code
+            throughout any and all events. We expect cooperation from all group members to help ensure a safe
+            environment for attendees.
+            <p>Overboard aims to provide a harassment-free and respectful community experience for all
+            participants. We do not tolerate harassment or bullying of any group members in any form. This
+            does not only extend to attendees but to team members and any other individual who chooses to
+            interact with the Overboard group.
+            Harassment includes the following:
+            <ul>
+            <li>Offensive verbal/electronic comments related to personal characteristics or choices.</li>
+            Disseminating sexual images or making sexual comments in public both in-person and
+            online.
+            <li>Deliberate intimidation including bullying, stalking, following, harassing photography or
+            recording.</li>
+            <li>Attempting disruption of events, electronic meetings, physical meetings or other events.</li>
+            <li>Inappropriate physical contact or unwelcome sexual attention.</li>
+            </ul>
+            <p>Participants asked to stop any harassing or bullying behaviour are expected to comply immediately.
+            If a participant’s behaviour is making fellow attendees uncomfortable or making events less
+            enjoyable, team members may issue verbal warnings. This may lead to further action if the indicated
+            behaviour continues.</p>
+            <p>If a participant engages in the behaviour described, a team member reserves the right to act to
+            resolve issues with an action they deem appropriate. This includes but is not limited to warning the
+            offender, expulsion from any Overboard events, or expulsion from mailing lists, discussion boards,
+            social media platforms or other electronic communications channels to resolve the issue. This may
+            include expulsion from Overboard the Meetup group or any other form of membership to the
+            Overboard group.</p>
+          </details>
 
-  <a name="eventsSection"><div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="text-center jumbotron p-3">
-          <h1 class="roboto">Upcoming Events</h1>
-
-          <hr>
-
-          <div id="meetupresponse">
-
-            Loading, please wait ...
-
+          <p>If you have any concerns or queries about the code of conduct, please contact a member of the team.</p>
           </div>
-        </div>
       </div>
-    </div>
-  </a>
+    </a>
 
   <!---About the team--->
 
@@ -200,9 +263,9 @@
 
       <div class="d-flex flex-wrap justify-content-center">
         <div class="p-2">
-          <div class="card h-100" style="width:8rem">
+          <div class="card h-100" style="width:9rem">
             <div class="card-header text-center">
-              Thomas
+              Daniel
             </div>
             <img class="card-img-top mt-3" src="oblogo.svg" height="100px">
             <div class="card-body">
@@ -213,7 +276,7 @@
         </div>
 
         <div class="p-2">
-          <div class="card h-100" style="width:8rem">
+          <div class="card h-100" style="width:9rem">
             <div class="card-header text-center">
               Charlie
             </div>
@@ -226,9 +289,9 @@
         </div>
 
         <div class="p-2">
-          <div class="card h-100" style="width:8rem">
+          <div class="card h-100" style="width:9rem">
             <div class="card-header text-center">
-              Dan
+              Thomas
             </div>
             <img class="card-img-top mt-3" src="oblogo.svg" height="100px">
             <div class="card-body">
@@ -239,57 +302,45 @@
         </div>
 
         <div class="p-2">
-          <div class="card h-100" style="width:8rem">
+          <div class="card h-100" style="width:9rem">
             <div class="card-header text-center">
               Sarah
             </div>
             <img class="card-img-top mt-3" src="oblogo.svg" height="100px">
             <div class="card-body">
               <p class="card-text text-center">
-                Wednesday co-ordinator
+                Saturday team and unofficial baker
             </div>
           </div>
         </div>
 
         <div class="p-2">
-          <div class="card h-100" style="width:8rem">
+          <div class="card h-100" style="width:9rem">
             <div class="card-header text-center">
-              Thees
+              Rob
             </div>
             <img class="card-img-top mt-3" src="oblogo.svg" height="100px">
             <div class="card-body">
               <p class="card-text text-center">
-                Liaison Manager
+                Bloobmaster General
             </div>
           </div>
         </div>
 
         <div class="p-2">
-          <div class="card h-100" style="width:8rem">
+          <div class="card h-100" style="width:9rem">
             <div class="card-header text-center">
-              Kaitlin
+              Liz
             </div>
             <img class="card-img-top mt-3" src="oblogo.svg" height="100px">
             <div class="card-body">
               <p class="card-text text-center">
-                Social Media
+                Events co-ordinator
             </div>
           </div>
         </div>
         
         
-        <div class="p-2">
-          <div class="card h-100" style="width:8rem">
-            <div class="card-header text-center">
-              Zi
-            </div>
-            <img class="card-img-top mt-3" src="oblogo.svg" height="100px">
-            <div class="card-body">
-              <p class="card-text text-center">
-                Website Lackey
-            </div>
-          </div>
-        </div>
 
       </div>
 
@@ -305,8 +356,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
 
-  <!--API call JavaScript stuff-->
-  <script src="main.js"></script>
 </body>
 
 </html>
