fix nav bar and some tweaks

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
           <a class="nav-link" href="#eventsSection">Events</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#codeOfConductSection">Code of Conduct</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#teamSection">Team</a>
         </li>
       </ul>
@@ -195,6 +198,7 @@
 
     <!-- Code of Conduct Section -->
     <a name="codeOfConductSection">
+      <div class="container">
       <div class="text-center jumbotron p-3">
         <h1 class="roboto">Code of Conduct</h1>
         <hr>
@@ -237,7 +241,7 @@
             <li>Inappropriate physical contact or unwelcome sexual attention.</li>
             </ul>
             <p>Participants asked to stop any harassing or bullying behaviour are expected to comply immediately.
-            If a participant’s behaviour is making fellow attendees uncomfortable or making events less
+            If a participant's behaviour is making fellow attendees uncomfortable or making events less
             enjoyable, team members may issue verbal warnings. This may lead to further action if the indicated
             behaviour continues.</p>
             <p>If a participant engages in the behaviour described, a team member reserves the right to act to
@@ -251,6 +255,7 @@
           <p>If you have any concerns or queries about the code of conduct, please contact a member of the team.</p>
           </div>
       </div>
+    </div>
     </a>
 
   <!---About the team--->
