fix image and add clarification

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div class="card-header">
             Parties and Special Events
           </div>
-          <img class="card-img-top" src="halloween.jpg">
+          <img class="card-img-top" src="halloween.png">
           <div class="card-body">
             <p class=" card-text">
               From Halloween, to Christmas, to Pride Parades - we love any excuse to dress up and throw a party. Cosplay not mandatory but highly encouraged.
@@ -204,7 +204,7 @@
         <hr>
         <div class="container text-left">
           As an organisation we aim to maintain a fun, inclusive and safe environment for playing games with our group of peers.
-            Hopefully participants will display the following behaviour when interacting with each other during sessions:
+            Hopefully participants will display the following behaviour when interacting with each other during sessions (click to expand):
           <details><summary>Good board game etiquette</summary>
           <ul>
             <li>Maintain a friendly demeanour (even when losing).</li>
